--- a/build.gradle
+++ b/build.gradle
@@ -18,16 +18,14 @@ dependencies {
     implementation("io.github.bonigarcia:webdrivermanager:5.5.3")
     implementation("commons-io:commons-io:2.11.0")
     testImplementation("org.junit.jupiter:junit-jupiter-params:5.9.1")
-    //implementation 'ch.qos.logback:logback-core:1.4.5'
     testImplementation("org.slf4j:slf4j-simple:2.0.6")
-    //testImplementation 'ch.qos.logback:logback-classic:1.4.5'
     testImplementation("io.qameta.allure:allure-junit5:2.20.1")
     implementation("io.qameta.allure:allure-java-commons:2.20.1")
     implementation("io.qameta.allure:allure-commandline:2.20.1")
     testImplementation("io.qameta.allure:allure-assertj:2.20.1")
     runtimeOnly("org.aspectj:aspectjweaver:1.9.19")
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
-    implementation 'io.appium:java-client:8.5.1'
+    implementation("com.fasterxml.jackson.core:jackson-databind:2.15.2")
+    implementation("io.appium:java-client:8.5.1")
 }
 
 tasks.test {
