--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id("java")
     id("project-report")
+    id 'io.qameta.allure' version '2.20.1'
 }
 
 group = "org.example"
@@ -29,4 +30,7 @@ dependencies {
 
 tasks.test {
     useJUnitPlatform()
+}
+task serveAllureReport(type: Exec) {
+    commandLine "allure", "serve", "build/allure-results"
 }
